# esm2-inference-optimization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: LIMITATIONS.md  METHODOLOGY.md  PLAN.md  PROFILING.md  REPRODUCIBILITY.md  RESULTS.md
docs/commits/: 0001-repo-scaffold.md  0002-gpu-environment-check.md  0003-baseline-benchmark.md  0004-correctness-and-pooling.md  0005-batching-and-padding.md  0006-torch-compile.md  0007-triton-pooling-kernel.md  0008-profiling.md  0009-results-and-readme.md  0010-final-cleanup.md
docs/milestones/: 01-environment-and-scaffold.md  02-baseline-esm2-inference.md  03-correctness-and-pooling.md  04-batching-and-padding.md  05-torch-compile.md  06-triton-pooling-kernel.md  07-profiling.md  08-results-and-readme.md  09-final-cleanup.md
docs/prompts/: initial-agent-task.md
docs/review_notes/: 01-environment-and-scaffold-human-review.md  02-baseline-human-review.md  03-correctness-and-pooling-human-review.md  04-batching-and-padding-human-review.md  05-torch-compile-human-review.md  06-triton-pooling-kernel-human-review.md  (+1 more)
scripts/: 00_check_environment.py  01_bench_baseline.py  02_check_correctness.py  03_bench_batching.py  04_bench_compile.py  05_bench_triton_pooling.py  06_profile_pytorch.py  07_summarize_results.py
site/: Makefile  gemm.html  hardware.html  index.html  kernel.html  m0.html  m1.html  m2.html  m3.html  m4.html  m5.html  m6.html  m7.html  m8.html  m9.html
tests/: test_batching.py  test_pooling.py  test_results.py  test_sequences.py  test_summarize.py  test_triton_pooling.py
(+23 files in other folders)
