[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "esm2-perf"
version = "0.1.0"
description = "Reproducible performance engineering for ESM2 protein embedding extraction on NVIDIA L4"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vladimir Shakirov" }]
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "safetensors",
    "numpy",
    "pandas",
    "tqdm",
    "rich",
    "typer",
    "biopython",
]

[project.optional-dependencies]
dev = ["pytest"]
triton = ["triton"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
